add wirkflows for github

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@f0rce/lit-ace": "1.11.1",
     "@polymer/polymer": "3.5.1",
     "@vaadin/a11y-base": "24.3.13",
     "@vaadin/accordion": "24.3.13",
@@ -79,9 +78,7 @@
     "date-fns": "2.29.3",
     "lit": "3.1.2",
     "proj4": "2.9.2",
-    "vis-network": "9.1.9",
-    "xterm": "5.1.0",
-    "xterm-addon-fit": "0.7.0"
+    "vis-network": "9.1.9"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "5.0.5",
@@ -103,7 +100,6 @@
   },
   "vaadin": {
     "dependencies": {
-      "@f0rce/lit-ace": "1.11.1",
       "@polymer/polymer": "3.5.1",
       "@vaadin/a11y-base": "24.3.13",
       "@vaadin/accordion": "24.3.13",
@@ -179,9 +175,7 @@
       "date-fns": "2.29.3",
       "lit": "3.1.2",
       "proj4": "2.9.2",
-      "vis-network": "9.1.9",
-      "xterm": "5.1.0",
-      "xterm-addon-fit": "0.7.0"
+      "vis-network": "9.1.9"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "5.0.5",
@@ -201,7 +195,7 @@
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "9544b86b410f71ae0a97e6f95466296cdec2cb7778cc156b1988c25c50d8885f"
+    "hash": "8c133cb1417d756bc6c8c99f869fef0ce132119488661148f9ae3277c4506b05"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -279,9 +273,6 @@
     "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
     "date-fns": "$date-fns",
     "proj4": "$proj4",
-    "vis-network": "$vis-network",
-    "xterm-addon-fit": "$xterm-addon-fit",
-    "xterm": "$xterm",
-    "@f0rce/lit-ace": "$@f0rce/lit-ace"
+    "vis-network": "$vis-network"
   }
 }
